--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <a href="1 - Movie Ranking/">Movie Ranking Project</a><br>
-    <a href="2 - Birthday Invite/">Birthady Invite Project</a>a><br>
+    <a href="2 - Birthday Invite/">Birthady Invite Project</a><br>
     <a href="3- Portfolio Website/">HTML Portfolio Project</a>
 </body>
 </html>
